# TG-download-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  ci_smoke_test.py  downloader.py  main.py  pyproject.toml  render.yaml  requirements.txt  start.sh  test_bot.py  webhook.py
.github/workflows/: autopep8.yml  build-and-release-manager.yml  python-package.yml  release.yml  summary.yml  trufflehog.yml
.jules/: bolt.md
deploy/self-hosted/: .env.example  README.md  docker-compose.yml
deploy/yandex/: README.md  deploy_free_tier.sh
src/: downloader.py  main.py  webhook.py
tests/: ci_smoke_test.py  test_bot.py
