[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-download-bot"
version = "0.1.0"
description = "Telegram bot that downloads YouTube videos and sends them back in chat."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot",
    "python-dotenv",
    "yt-dlp==2026.2.21",
    "flask",
    "bgutil-ytdlp-pot-provider",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
